--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="receipt-container">
         <div class="receipt-header">
-
+            <img src="./images/logo.png" alt="logo.png" class="logo">
         </div>
         <div class="receipt-body">
 
