receipt container class added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         .receipt-container{
             width:80%;
             border:1px solid grey;
+            border-radius:5px;
+            background-color:white;
+            display: block;
         }
     </style>
 </head>
