--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
             border:1px solid grey;
             border-radius:5px;
             background-color:white;
-            display: block;
+            margin:0 auto;
+            padding:10px;
+            box-shadow:0 0 10px rgba(0,0,0,0.2);
+        }
+        .logo{
+            width:100px;
+            display:block;
+            margin:0 auto;
         }
     </style>
 </head>
