--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="receipt-container">
         <div class="receipt-header">
             <img src="./images/logo.png" alt="logo.png" class="logo">
+            <h2 class="title">Women's College of Home Science and BCA</h2>
         </div>
         <div class="receipt-body">
 
