title class added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             display:block;
             margin:0 auto;
         }
+        .title{
+            text-align:center;
+        }
     </style>
 </head>
 <body>
