--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <div class="receipt-header">
             <img src="./images/logo.png" alt="logo.png" class="logo">
             <h2 class="title">Women's College of Home Science and BCA</h2>
+            <p class="address">
+                Datta Nagar<br/>
+                 Loni,Tal-Rahata,<br>
+                 Maharashtra 413713
+            </p>
         </div>
         <div class="receipt-body">
 
