address class added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         .title{
             text-align:center;
         }
+        .address{
+            text-align:right;
+        }
     </style>
 </head>
 <body>
