mobile class added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         .address{
             text-align:right;
         }
+        .mobile{
+            text-align:right;
+        }
     </style>
 </head>
 <body>
