receipt-container class new changes  added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             margin:0 auto;
             padding:10px;
             box-shadow:0 0 10px rgba(0,0,0,0.2);
+            border-bottom:1px dashed black;
         }
         .logo{
             width:100px;
