receipt-header class added

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             margin: 0 auto;
             padding: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+        .receipt-header{
             border-bottom: 1px dashed black;
         }
-
         .logo {
             width: 100px;
             display: block;
