--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 Maharashtra 413713
             </p>
             <p class="mobile">+91-8274878752</p>
-        </div>
+        </div><hr>
         <div class="receipt-body">
             <h3 class="receipt-title">Payment Receipt</h3>
         </div>
