--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
                 Maharashtra 413713
             </p>
             <p class="mobile">+91-8274878752</p>
-        </div><hr>
+        </div>
         <div class="receipt-body">
             <h3 class="receipt-title">Payment Receipt</h3>
+            <span>Ro. No.:</span>
+            <span>21</span>
         </div>
         <div class="receipt-footer">
 
