span tag name change as div

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
         </div>
         <div class="receipt-body">
             <h3 class="receipt-title">Payment Receipt</h3>
-            <span>Ro. No.:</span>
-            <span>21</span>
+            <div>
+                <div class="receipt-detail-key">Ro. No.:</div>
+                <div class="receipt-detail-value">21</div>
+            </div>
         </div>
         <div class="receipt-footer">
 
