--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             font-size:30px;
             margin:40px 0;
         }
+        .receipt-detail-key{
+           color:grey;
+        }
+        .receipt-detail-value{
+          font-weight:bold;
+        }
     </style>
 </head>
 
@@ -61,7 +67,7 @@
         </div>
         <div class="receipt-body">
             <h3 class="receipt-title">Payment Receipt</h3>
-            <div>
+            <div class="receipt-detail">
                 <div class="receipt-detail-key">Ro. No.:</div>
                 <div class="receipt-detail-value">21</div>
             </div>
