receipt-detail class new information added

--- a/index.html
+++ b/index.html
@@ -44,11 +44,19 @@
             font-size:30px;
             margin:40px 0;
         }
+        .receipt-detail{
+            display:flex;
+            justify-content:space-around;
+            font-size:20px;
+            margin:20px 0;
+        }
         .receipt-detail-key{
            color:grey;
         }
         .receipt-detail-value{
           font-weight:bold;
+          border-bottom:1px dashed gray;
+          width:30%;
         }
     </style>
 </head>
