--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
             <div class="receipt-detail">
                 <div class="receipt-detail-key">Ro. No.:</div>
                 <div class="receipt-detail-value">21</div>
+                <div class="receipt-detail-key">F.R.P.No.:</div>
+                <div class="receipt-detail-value">5678</div>
+                <div class="receipt-detail-key">Name:</div>
+                <div class="receipt-detail-value">Jadhav Sarika Sanjay</div>
+                <div class="receipt-detail-key">Class:</div>
+                <div class="receipt-detail-value">TY</div>
+                <div class="receipt-detail-key">Course:</div>
+                <div class="receipt-detail-value">BCA</div>
+                <div class="receipt-detail-key">Date:</div>
+                <div class="receipt-detail-value">28 Dec 2024</div>
+                <div class="receipt-detail-key">Amount:</div>
+                <div class="receipt-detail-value">10000/-</div>
+                <div class="receipt-detail-key">Amount mode:</div>
+                <div class="receipt-detail-value">UPI</div>
             </div>
         </div>
         <div class="receipt-footer">
