--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         }
         .receipt-detail{
             display:flex;
-            justify-content:space-around;
+            justify-content:center;
             font-size:20px;
             margin:20px 0;
         }
@@ -108,6 +108,7 @@
                 <div class="receipt-detail-key">Amount mode:</div>
                 <div class="receipt-detail-value">UPI</div>
             </div>
+            <p>Accountant Signature</p>
         </div>
         <div class="receipt-footer">
 
