new image added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
           border-bottom:1px dashed gray;
           width:30%;
         }
+        .account{
+            text-align:right;
+            margin:50px;
+        }
+        .stamp{
+            width:200px;
+            position:absolute;
+            right:0;
+            bottom:0;
+        }
     </style>
 </head>
 
@@ -108,7 +118,8 @@
                 <div class="receipt-detail-key">Amount mode:</div>
                 <div class="receipt-detail-value">UPI</div>
             </div>
-            <p>Accountant Signature</p>
+            <img src="./images/stamp.png" class="stamp">
+            <p class="account">Accountant Signature</p>
         </div>
         <div class="receipt-footer">
 
