--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         .mobile {
             text-align: right;
         }
+        .receipt-body{
+            position:relative;
+        }
         .receipt-title{
             text-align:center;
             font-size:30px;
@@ -67,7 +70,8 @@
             width:200px;
             position:absolute;
             right:0;
-            bottom:0;
+            bottom:-20px;
+            transform:rotate(-30deg);
         }
     </style>
 </head>
