--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         }
         .receipt-body{
             position:relative;
+            border:1px solid black;
         }
         .receipt-title{
             text-align:center;
@@ -67,7 +68,7 @@
             margin:50px;
         }
         .stamp{
-            width:150px;
+            width:100px;
             position:absolute;
             right:0;
             bottom:-20px;
