--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
         .receipt-body{
             position:relative;
-            border:1px solid black;
+            border-bottom:1px solid black;
         }
         .receipt-title{
             text-align:center;
@@ -68,7 +68,7 @@
             margin:50px;
         }
         .stamp{
-            width:100px;
+            width:130px;
             position:absolute;
             right:0;
             bottom:-20px;
@@ -125,7 +125,7 @@
             </div>
             <img src="./images/stamp.png" class="stamp">
             <p class="account">Accountant Signature</p>
-        </div>
+        </div><br/>
         <div class="receipt-footer">
 
         </div>
