--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
             bottom:-20px;
             transform:rotate(-20deg);
         }
+        .receipt-footer{
+            text-align:center;
+            padding:20px 0;
+            font-size:20px;
+            background-color:rgb(244, 244, 156);
+        }
     </style>
 </head>
 
@@ -127,6 +133,7 @@
             <p class="account">Accountant Signature</p>
         </div><br/>
         <div class="receipt-footer">
+            <p>Paid to the credit of College of Home Science and BCA</p>
 
         </div>
     </div>
