new changes added

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
         }
         .stamp{
             width:130px;
+            padding:10px;
             position:absolute;
-            right:0;
-            bottom:-20px;
+            right:20px;
+            bottom:20px;
             transform:rotate(-20deg);
         }
         .receipt-footer{
@@ -79,6 +80,9 @@
             padding:20px 0;
             font-size:20px;
             background-color:rgb(244, 244, 156);
+        }
+        .bottom{
+            text-align: center;
         }
     </style>
 </head>
@@ -132,9 +136,9 @@
             <img src="./images/stamp.png" class="stamp">
             <p class="account">Accountant Signature</p>
         </div><br/>
+        <p>Paid to the credit of College of Home Science and BCA</p>
         <div class="receipt-footer">
-            <p>Paid to the credit of College of Home Science and BCA</p>
-
+            <p class="bottom">Thank you for the payment</p>
         </div>
     </div>
 </body>
